# desktop_Snake_and_Tetris_games-on-CPPlang-with_Qt

./: README.md
src/: Doxyfile  Makefile
src/brick_game/snake/: snakeController.cc  snakeController.h  snakeModel.cc  snakeModel.h  snake_cli.cpp  structures.h
src/brick_game/tetris/: tetrisBackend.c  tetrisBackend.h  tetris_cli.c
src/gui/cli/: frontend.c  frontend.h
src/gui/desktop/: CMakeLists.txt  snakeWidget.cc  snakeWidget.h  snake_desk.cc  tetrisWidget.cc  tetrisWidget.h  tetris_desk.cc
src/test/: snake_test.cpp  tetris_test.c
